--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,17 +2,19 @@
 # Currently its setup to run on any tag that matches the pattern "v*" (ie. v0.1.0).
 #
 # This uses an action (hashicorp/ghaction-import-gpg) that assumes you set your
-# private key in the `GPG_PRIVATE_KEY` secret and passphrase in the `PASSPHRASE` secret.
+# private key in the `GPG_PRIVATE_KEY` secret and passphrase in the `GPG_PASSPHRASE` secret.
 #
 # You will need to pass the `--batch` flag to `gpg` in your signing step
 # in `goreleaser` to indicate this is being used in a non-interactive mode.
 #
 ---
-name: release
-on:
+name: Release
+
+on:  # yamllint disable-line rule:truthy
   push:
     tags:
       - 'v*'
+
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
@@ -23,19 +25,19 @@ jobs:
         uses: actions/checkout@v4.2.2
         with:
           fetch-depth: 0
-      
+
       - name: Set up Go
         uses: actions/setup-go@v5.4.0
         with:
           go-version: 1.24.1
-      
+
       - name: Import GPG key
         id: import_gpg
         uses: crazy-max/ghaction-import-gpg@v6.2.0
         with:
           gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.GPG_PASSPHRASE }}
-      
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6.2.1
         with:
