--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -1,9 +1,10 @@
 ---
 name: Linter
 
-on:  # yamllint disable-line rule:truthy
+on: # yamllint disable-line rule:truthy
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
 
 jobs:
@@ -11,14 +12,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4.2.2
+        uses: actions/checkout@v5.0.0
 
       - name: Set up Go
-        uses: actions/setup-go@v5.4.0
+        uses: actions/setup-go@v5.5.0
         with:
-          go-version: 1.24.1
+          go-version: 1.24.6
 
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v7.0.0
+        uses: golangci/golangci-lint-action@v8.0.0
         with:
-          version: v2.1.2
+          version: v2.4.0
