--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,9 +1,10 @@
 ---
 name: Test
 
-on:  # yamllint disable-line rule:truthy
+on: # yamllint disable-line rule:truthy
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
 
 jobs:
@@ -14,9 +15,9 @@ jobs:
         uses: actions/checkout@v4.2.2
 
       - name: Set up Go
-        uses: actions/setup-go@v5.4.0
+        uses: actions/setup-go@v5.5.0
         with:
-          go-version: 1.24.3
+          go-version: 1.24.6
 
       - name: Test
         run: go test -v ./...
