--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -39,18 +39,20 @@ linters:
       - source: "^\\s*defer\\s+"
         linters:
           - errcheck
-      # Long due to table tests
       - source: "^func Test"
         linters:
+          # Due to table tests
           - funlen
+          - cyclop
+      - source: "^func mockServer"
+        linters:
+          # Due to mockServer definiion
+          - funlen
+          - cyclop
       # Long as it defines the resource schema
       - source: "^func Resource"
         linters:
           - funlen
-      # High cyclomatic complexity due to table test
-      - source: "^func Test"
-        linters:
-          - cyclop
 
 formatters:
   enable:
