--- a/internal/client/mock.yaml
+++ b/internal/client/mock.yaml
@@ -1439,7 +1439,7 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
+            type: string
       responses:
         '200':
           description: Successful response
@@ -1447,6 +1447,23 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Firewall'
+              example:
+                firewall:
+                  ip: "1.2.3.4"
+                  whitelist_hos: true
+                  status: "active"
+                  rules:
+                    input:
+                      - name: allow-ssh
+                        src_ip: 0.0.0.0/0
+                        dst_port: "22"
+                        protocol: tcp
+                        action: accept
+                      - name: allow-http
+                        src_ip: 0.0.0.0/0
+                        dst_port: "80"
+                        protocol: tcp
+                        action: accept
         '404':
           $ref: '#/components/responses/ErrorResponse'
       security:
